--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <ul> Auftrag 1 <br>
 Auftrag 2 <br>
 Auftrag 3" </ul>
-<img src="https://www.google.at/imgres?imgurl=https%3A%2F%2Fstephanheinrich.com%2Fwp-content%2Fuploads%2FFotolia_18880727_Subscription_Monthly_M.jpg&imgrefurl=https%3A%2F%2Fstephanheinrich.com%2F2015%2F11%2F02%2F097-wie-sie-schneller-zum-auftrag-kommen%2F&tbnid=3fwNje0o-bvF4M&vet=12ahUKEwjF9vHGhfjvAhWajaQKHSqrAoUQMygCegUIARDAAQ..i&docid=rYhjgcJlm0aWKM&w=1688&h=1125&q=auftrag&ved=2ahUKEwjF9vHGhfjvAhWajaQKHSqrAoUQMygCegUIARDAAQ">
-  https://www.google.at/imgres?imgurl=https%3A%2F%2Fstephanheinrich.com%2Fwp-content%2Fuploads%2FFotolia_18880727_Subscription_Monthly_M.jpg&imgrefurl=https%3A%2F%2Fstephanheinrich.com%2F2015%2F11%2F02%2F097-wie-sie-schneller-zum-auftrag-kommen%2F&tbnid=3fwNje0o-bvF4M&vet=12ahUKEwjF9vHGhfjvAhWajaQKHSqrAoUQMygCegUIARDAAQ..i&docid=rYhjgcJlm0aWKM&w=1688&h=1125&q=auftrag&ved=2ahUKEwjF9vHGhfjvAhWajaQKHSqrAoUQMygCegUIARDAAQ
+<ol> Auftrag 1 <br>
+  Auftrag 2 <br>
+  Auftrag 3 </ol>
