--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <ul> Auftrag 1 <br>
 Auftrag 2 <br>
 Auftrag 3" </ul>
-<ol> Auftrag 1 <br>
-  Auftrag 2 <br>
-  Auftrag 3 </ol>
+<ol>
+  <li>Auftrag 1 </li>
+  <li>Auftrag 2 </li>
+  <li>Auftrag 3 </li>
+  </ol>
