--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     h1 { color: green;}
     p1 { color: rgb(0, 300, 300);}
   </style>
-<title> Auftrag </title>
+<title> Meine Homepage </title>
 </head>
 <body>
 <h1>
