--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style> 
     h1 { color: green;}
     p1 { color: rgb(0, 300, 300);}
+    ol { color: rgb(9, 59, 100);}
   </style>
 <title> Meine Homepage </title>
 </head>
