--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@ Auftrag 3" </ul>
   <li>Auftrag 2 </li>
   <li>Auftrag 3 </li>
 </ol>
+  <img src="https://www.google.at/imgres?imgurl=https%3A%2F%2Fstatic.giga.de%2Fwp-content%2Fuploads%2F2015%2F03%2Fgeschweifte-klammern-rcm480x270u.jpg&imgrefurl=https%3A%2F%2Fwww.giga.de%2Ftipp%2Fgeschweifte-klammer-auf-tastatur-schreiben-auch-word-excel-so-gehts%2F&tbnid=tVeU24xG6HxEtM&vet=12ahUKEwijp9DZl_jvAhWy57sIHR9uBpsQMygCegUIARC7AQ..i&docid=r4qJpeSZa5ioLM&w=480&h=270&q=geschwungene%20klammer%20tastatur&hl=de&ved=2ahUKEwijp9DZl_jvAhWy57sIHR9uBpsQMygCegUIARC7AQ">
   <p1> Dieser Auftrag will, dass ich eine Website mache und hier ist sie </p1>
