--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     h1 { color: green;}
     #Anfang { color: rgb(0, 300, 300);}
     ol { color: rgb(800, 1, 100);}
+    body { backgroundcolor: rgb(5, 2, 8);}
   </style>
 <title> Meine Homepage </title>
 </head>
