--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Auftrag 3" </ul>
   <li>Auftrag 2 </li>
   <li>Auftrag 3 </li>
 </ol>
-  <img src="https://mh-2-bildagentur.panthermedia.net/media/previews/0009000000/09669000/09669218_high.jpg">
+  <img src="https://cdn.duden.de/lexem_images/10168.png?null">
   <p> id="Anfang"> Dieser Auftrag will, dass ich eine Website mache und hier ist sie </p>
   <p> Hier arbeite ich nun weiter an meiner Website und versuche es möglichst gut zu machen </p>
   <a src="https://www.borg.at/ausbildung/e-learning/">
