--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     h1 { color: green;}
     #Anfang { color: rgb(0, 300, 300);}
     ol { color: rgb(800, 1, 100);}
-    body { background color: rgb(5, 2, 8);}
+    body { background-color: rgb(5, 2, 8);}
     #TEXT { color: rgb(5, 100, 400);}
   </style>
 <title> Meine Homepage </title>
@@ -23,7 +23,7 @@ Auftrag 3" </ul>
   <li>Auftrag 2 </li>
   <li>Auftrag 3 </li>
 </ol>
-  <img src="https://cdn.duden.de/lexem_images/10168.png?null">
+  <img src="https://cdn.duden.de/lexem_images/10168.png?null" width="10">
   <p> id="Anfang"> Dieser Auftrag will, dass ich eine Website mache und hier ist sie </p>
   <p> Hier arbeite ich nun weiter an meiner Website und versuche es möglichst gut zu machen </p>
   <a src="https://www.borg.at/ausbildung/e-learning/">
