--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Auftrag 3" </ul>
   <li>Auftrag 3 </li>
 </ol>
   <img src="https://cdn.duden.de/lexem_images/10168.png?null" width="1">
-  <p> id="Anfang"> Dieser Auftrag will, dass ich eine Website mache und hier ist sie </p>
+  <p>  EHRE ALLA! </p>
   <p> Hier arbeite ich nun weiter an meiner Website und versuche es möglichst gut zu machen </p>
   <a src="https://www.borg.at/ausbildung/e-learning/">
   <p id="TEXT"> Hier beginnt der Anfang dieses Auftrages. Ich weiß selber nicht was man hier genau von mir verlangt. Ich denke das Einzige, was ich können muss ist, dass ich einen Teil von dem verstehe was ich hier anstelle, aber gut. <br>
