--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     h1 { color: green;}
     #Anfang { color: rgb(0, 300, 300);}
     ol { color: rgb(800, 1, 100);}
-    body { background-color: rgb(5, 2, 8);}
+    body { background-color: rgb(0, 0, 0);}
     #TEXT { color: rgb(5, 100, 400);}
+    ul { color: rgb(300, 300, 200);}
   </style>
 <title> Meine Homepage </title>
 </head>
