--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ Auftrag 3" </ul>
   <li>Auftrag 2 </li>
   <li>Auftrag 3 </li>
 </ol>
-  <img src="https://cdn.duden.de/lexem_images/10168.png?null" width="200000">
+  <img src="https://cdn.duden.de/lexem_images/10168.png?null" width="200">
   <p>  EHRE ALLA! </p>
-  <a src="https://www.borg.at/ausbildung/e-learning/">
+  <a src="https://www.borg.at/ausbildung/e-learning/"> https://www.borg.at/ausbildung/e-learning/ </a>
   <p id="TEXT"> Hier beginnt der Anfang dieses Auftrages. Ich weiß selber nicht was man hier genau von mir verlangt. Ich denke das Einzige, was ich können muss ist, dass ich einen Teil von dem verstehe was ich hier anstelle, aber gut. <br>
   Mir ist klar, dass ich nächstes Jahr sowieso kein Informatik mehr haben werde, da ich mich für NWL entschieden habe, aber warum sollte man nicht ein bisschen mitarbeiten, sodass jetzt nicht eine 5 rauskommt. Das ganze wirkt zwar wie die komplette Ausbildung zu einem Influencer, aber egal, wie der Coronaleugner sagen würde. <br>
   Wie weit es geht, weiß ich leider auch nicht, aber mich beruhigt, dass ich im nächsten Jahr in der NWL-Klasse sitzte und theoretisch nichts mehr davon wissen muss. Wie man merkt benutze ich sehr gerne das Wort dass, das liegt wahrscheinlich daran, dass ich das in Latein gelernt habe und man dort sogutwie jeden Satz mit einem dass übersetzt. <br>
