--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
 <title> Project </title>
 <style> 
-#Tag 1 { colour: green;}
+#Tag 1 { colour: rgb(22, 100, 600);}
 </style>
 </head>
 <body>
