--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
 <title> Project </title>
-<style> 
+<style>
 #Tag 1 { colour: rgb(22, 100, 600);}
 </style>
 </head>
@@ -12,9 +12,17 @@
   <br>
   <p1> Das hier wird eine Art von Website, in der ich einfach über irgenwelche Sachen rede, die mich gerade interessieren </p>
 <h2 id="Tag 1"> Tag 1: </h2>
-<p1>Heute ist Mittwoch. Ich habe gerade gemerkt, dass ich noch diese Website machen sollte und da ich sowiso nichts anders gerade zu tun haben mache ich einfach das. 
+<p1>Heute ist Mittwoch. Ich habe gerade gemerkt, dass ich noch diese Website machen sollte und da ich sowiso nichts anders gerade zu tun haben mache ich einfach das.
   Da ich derzeit noch im Homeschooling bin, habe ich auch schon weitere Aufträge erledigt. Ein Beispiel wäre NWL. Für die, die nicht wissen was NWL ist, das ist das naturwissenschaftliche Labor und ist ein Fach was meistens recht entspannt ist.
-  Mich hat es jedoch diesmal etwas genervt, da man eine "Rakete" basteln musste und es mich ungefähr eine Flasche Essig und ich weiß nicht wie viele Päckchen Backpulver gekostet hat. Nachdem ich dann rausgefunden haben, dass ich das Ganze 
+  Mich hat es jedoch diesmal etwas genervt, da man eine "Rakete" basteln musste und es mich ungefähr eine Flasche Essig und ich weiß nicht wie viele Päckchen Backpulver gekostet hat. Nachdem ich dann rausgefunden haben, dass ich das Ganze
   falsch zusammengebaut haben, hatte ich noch einige weitere Fehlversuche und verzweifelte langsam. Es ist nämlich ziemlich ermüdend immerwieder mit dem Handy zu filmen, dass nichts passiert. Am Ende hatte ich ungefähr 30 Minuten Videomaterial
   und da ich keinen Bock mehr darauf hatte, meine Schwester angestellt zu filmen. Sie saß da und hat ungefähr 10 Minuten eine Flasche voll mit Essig gefilmt. Es ist schon interessant, wozu Geschwister alles brauchbar sind und wie einfach
   man sie begeistern kann indem man einfach sagt:"Los! Hilf mir bei einem Versuch!" Da war sie sofort dabei und hat sogar den Müll für Flaschen dursucht.
+
+<a src="https://my-project.html/bild.html
+"> htpps://my-project.html/bild.html
+</a>
+<p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.<p1>
+  <p1> Hier rede ich auch noch über anderen Kram </p1>
+  <a src="https://my-project.html/themen.html"> https://my-project.html/themen.html </a>
+  </body>
