--- a/project.html
+++ b/project.html
@@ -19,10 +19,12 @@
   und da ich keinen Bock mehr darauf hatte, meine Schwester angestellt zu filmen. Sie saß da und hat ungefähr 10 Minuten eine Flasche voll mit Essig gefilmt. Es ist schon interessant, wozu Geschwister alles brauchbar sind und wie einfach
   man sie begeistern kann indem man einfach sagt:"Los! Hilf mir bei einem Versuch!" Da war sie sofort dabei und hat sogar den Müll für Flaschen dursucht.
 
-<a src="https://my-project.html/bild.html
-"> htpps://my-project.html/bild.html
+<a src="https://simon-36-e.github.io
+/bild.html
+"> htpps://simon-36-e.github.io/html/bild.html
 </a>
 <p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.<p1>
   <p1> Hier rede ich auch noch über anderen Kram </p1>
-  <a src="https://my-project.html/themen.html"> https://my-project.html/themen.html </a>
+  <a src="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io
+/themen.html </a>
   </body>
