--- a/project.html
+++ b/project.html
@@ -17,14 +17,14 @@
   Mich hat es jedoch diesmal etwas genervt, da man eine "Rakete" basteln musste und es mich ungefähr eine Flasche Essig und ich weiß nicht wie viele Päckchen Backpulver gekostet hat. Nachdem ich dann rausgefunden haben, dass ich das Ganze
   falsch zusammengebaut haben, hatte ich noch einige weitere Fehlversuche und verzweifelte langsam. Es ist nämlich ziemlich ermüdend immerwieder mit dem Handy zu filmen, dass nichts passiert. Am Ende hatte ich ungefähr 30 Minuten Videomaterial
   und da ich keinen Bock mehr darauf hatte, meine Schwester angestellt zu filmen. Sie saß da und hat ungefähr 10 Minuten eine Flasche voll mit Essig gefilmt. Es ist schon interessant, wozu Geschwister alles brauchbar sind und wie einfach
-  man sie begeistern kann indem man einfach sagt:"Los! Hilf mir bei einem Versuch!" Da war sie sofort dabei und hat sogar den Müll für Flaschen dursucht.
+  man sie begeistern kann indem man einfach sagt:"Los! Hilf mir bei einem Versuch!" Da war sie sofort dabei und hat sogar den Müll für Flaschen dursucht.</p>
 
 <a src="https://simon-36-e.github.io
 /bild.html
-"> htpps://simon-36-e.github.io/html/bild.html
+"> htpps://simon-36-e.github.io/bild.html
 </a>
-<p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.<p1>
-  <p1> Hier rede ich auch noch über anderen Kram </p1>
+<p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1>
+  <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
   <a src="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io
 /themen.html </a>
   </body>
