--- a/project.html
+++ b/project.html
@@ -25,6 +25,5 @@
 </a>
 <p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1>
   <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
-  <a src="simon-36-e.github.io/themen.html"> https://simon-36-e.github.io
-/themen.html </a>
+  <a src="simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html </a>
   </body>
