--- a/project.html
+++ b/project.html
@@ -3,7 +3,8 @@
 <head>
 <title> Project </title>
 <style>
-#Tag 1 { colour: rgb(22, 100, 600);}
+#Tag 1 { colour: green;}
+  
 </style>
 </head>
 <body>
@@ -21,7 +22,7 @@
 
 <a href="https://simon-36-e.github.io/bilder.html"> htpps://simon-36-e.github.io/bild.html
 </a> <br>
-<p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1>
+<p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1> <br>
   <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
   <a href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html </a>
   </body>
