--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
 <title> Project </title>
 <style>
-#Tag 1 { color: rgb(0, 300, 300);}
+h2 { color: rgb(0, 300, 300);}
   
 </style>
 </head>
