--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <title> Project </title>
 <style>
 h2 { color: rgb(0, 300, 300);}
-  
+  body { background-color: rgb(20, 21, 22)
 </style>
 </head>
 <body>
