--- a/project.html
+++ b/project.html
@@ -5,6 +5,8 @@
 <style>
 h2 { color: rgb(0, 300, 300);}
   body { background-color: rgb(20, 21, 22)
+    h1 { color: rgb(100, 100, 200)
+      p { color: rgb(10, 200, 100)
 </style>
 </head>
 <body>
