--- a/project.html
+++ b/project.html
@@ -4,9 +4,9 @@
 <title> Project </title>
 <style>
 h2 { color: rgb(0, 300, 300);}
-  body { background-color: rgb(300, 21, 22)
-    h1 { color: rgb(100, 100, 200)
-      p { color: rgb(10, 200, 100)
+  body { background-color: rgb(300, 21, 22)}
+  h1 { color: rgb(100, 100, 200)}
+  p { color: rgb(10, 200, 100)}
 </style>
 </head>
 <body>
