--- a/themen.html
+++ b/themen.html
@@ -5,16 +5,14 @@
  </style>
 </head>
 <body>
-<h1 id="Man"> Thema: Manspreading</h1>
-<p1> Vielleicht ist dir das Thema gar nicht bekannt und ich möchte dir nun erklären worum es dabei geht oder was das Problem dabei ist.
-Als Manpreading wird eine breitbeinige Sitzposition bei Männern genannt. Frauen fühlen sich dann davon angegriffen und einige Feministinnen
-haben eine Kampagne gestartet, in welcher sie Plakate und sogar Hosen die am Schritt mit dem Aufdruck "Give us space" oder "toxische Männlichkeit"
-bedruckt sind, verteilt. Man kann sich auch im Internet gut über dieses Thema informieren. <br>
-Viele kritisieren jedoch diese Kampagne und finden, dass es unnötig und sogar in die Richtung peinlich geht. Darüber kann man speziell auf Youtube
-viel finden. Häufig werden auch die Beitrage von den öffentlichen Sendern kritisiert, dass diese stark gefälscht werden und Männerhass verbreiten.
-Starke Wiedersprüche finden die Kritiker oft in den Aussagen von Feministen, denn selbst eine Feministin, die sich für diese Kampange eingesetzt hat,
-sagte, dass es sehr gemütlich sei so zu sitzten. Dadurch hat sie es geschafft für eine Menge Doppelmoral beschimpft zu werden, da ein Argument, wieso 
-Männer so sitzen, ist es, dass es sehr gemütlich ist und deshalb Männer sich so hinsitzen. 
-Über dieses Thema könnte man jetzt noch endlos weiterreden, da es immer wieder Beschimpungen auf beiden Seiten gibt und man sich täglich stundenlang
-damit beschäftigen müsse. 
+<h1 id="Man"> Thema: Aufregung wegen Corona</h1>
+<p1> Vielleich hat man es der ein oder andere schon mitbekommen, aber derzeit gibt es wieder Homeschooling. Warum gibt es das aber wieder? Ja, das ist eine sehr gute Frage und die Antwort darauf ist,
+ dass es wieder irgendwelche Trottel nicht geschafft haben die Einschränkungen einzuhalten. Ich meine das kommt ja nicht von alleine, dass die Regierung sagt:" Ja, lass heute mal wieder die Grundrechte
+ einschränken." Nein, das macht sie aus einem Grund. Dieser Grund ist, dass die Corona-Infektionen wieder steigen, weil die Leute sich denken:" Jetzt sieht es wieder so aus, als gägnen die Zahlen wieder 
+ runter. Ich würd sagen lass mal alle zusammentrommeln und feiern." Vielleicht ist das jetzt etwas radikal formuliert, aber mir kommt es so vor. Ich sitzt hier und kann wieder in mein Homeschooling gehen,
+ weil ihr feiern wolltet oder nur mal kurz jemanden Besuchen wolltet. Das nervt mich und ich würde jetzt hier am liebsten die Leute beleidigen, aber ich bin da auch keine Ausnahme. Ich habe das auch schon
+ gemacht und denke mir jedesmal danach:" Das ist eigentlich schon ein bisschen dumm, oder?" Nunja es geht aber auch schlimmer. Zum Beispiel haben diese intelligenten Leute aus Wien sich letzten Sommer gedacht:
+ " Lass mal alle auf dem Stadtplatz treffen und saufen." Ich mein, ich wusste das ich ein bisschen dumm bin, wenn ich mal kurz jemandem was vorbei bringe oder so was, aber das ist doch einfach für
+ das Virus eine Einladung zum alle anstecken. Ich wusste einfach nicht was ich damals sagen sollte, als ich das in den Nachrichten gesehen habe und da hab ich mich noch gewundert warum ich im Homeschooling
+ bin. Man könnte ja meinen, dass der Mensch einen minimalen Sinn hat, das Dumme vom Intelligenten zu unterscheiden, aber da zweifle ich inzwischen auch dran auch an meinem eigenen. 
 </body>
