--- a/themen.html
+++ b/themen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title> Kram </title>
-<style> #Man { colour: green;}
+<style> #Man { colour: rgb(3, 100, 200);}
  body { background-colour: red;}
  </style>
 </head>
