--- a/themen.html
+++ b/themen.html
@@ -2,7 +2,7 @@
 <head>
 <title> Kram </title>
 <style> #Man { colour: rgb(3, 100, 200);}
- body { background-colour: red;}
+ body { background-colour: rgb(200, 2, 100);}
  </style>
 </head>
 <body>
