--- a/themen.html
+++ b/themen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title> Kram </title>
+<title> Themen </title>
 <style> #Man { colour: rgb(3, 100, 200);}
  body { background-colour: rgb(200, 2, 100);}
  </style>
