--- a/themen.html
+++ b/themen.html
@@ -2,7 +2,7 @@
 <head>
 <title> Themen </title>
 <style> #Man { colour: rgb(3, 100, 200);}
- body { background-colour: rgb(200, 2, 100);}
+ body { background-color: rgb(300, 21, 22);}
  </style>
 </head>
 <body>
