--- a/themen.html
+++ b/themen.html
@@ -3,6 +3,7 @@
 <title> Themen </title>
 <style> #Man { colour: rgb(3, 100, 200);}
  body { background-color: rgb(300, 21, 22);}
+ p { color: rgb(10, 200, 100)}
  </style>
 </head>
 <body>
