--- a/themen.html
+++ b/themen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title> Themen </title>
-<style> #Man { colour: rgb(3, 100, 200);}
+<style> #Man { color: rgb(100, 100, 200);}
  body { background-color: rgb(300, 21, 22);}
  p { color: rgb(10, 200, 100)}
  </style>
