--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@ h2 { color: rgb(0, 300, 300);}
   Man könnte zwar sagen das sich jeder Tag anders anfühlen sollte, weil man alles selbst bestimmen kann und die Viedeokonferenzen meist auch nicht am selbeh Tag stattfinden. Da kann ich aber diese Leute nur enttäuschen, denn
   die Videokonferenzen sind so gut wie immer gleich geplant, was ja nichts Schlechtes ist, dadurch kommt nämlich eine gewisse Routine in die Woche, aber wenn man jedem Tag schon einen Namen geben kann allein wegen den Videokonferenzen,
   dann ist das etwas zu viel des Guten. Die Möglichkeit, dass du die Aufgaben selbst bestimmen kannst, ist auch nur so medium gut, denn du brauchst einen gewissen Plan, den du jede Woche gleich abarbeitest, denn sonst vergisst du schnell.
-  Vorallem vergisst du schnell etwas, wenn man die gesamte Lehergesellschaft an der Schule auffordert die selbe Plattform für die Aufgaben zu verwenden und dann die drei Lehrer um die Ecke kommen, die überhaupt keinen Bock darauf haben. 
+  Vorallem vergisst du schnell etwas, wenn man die gesamte Lehergesellschaft an der Schule auffordert die selbe Plattform für die Aufgaben zu verwenden und dann die drei Lehrer um die Ecke kommen, die überhaupt keine Lust darauf haben. 
   Ich weiß nicht wie oft ich schon gedacht habe ich wäre fertig und dann kommt mir wieder in den Sinn, dass es da ja noch Aufgaben auf anderen Plattform gibt. Dieses Gefühl ist einfach entmutigend.
  </p>
 
@@ -32,4 +32,14 @@ h2 { color: rgb(0, 300, 300);}
 <p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1> <br>
   <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
   <a href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html </a>
+  
+  <h2> Geschwister im Homeschooling</h2>
+  <p1> Homeschooling ist nicht das aller beste. Ich habe ja schon früher gesagt, dass man sich dadurch einsam fühlt und seine sozialen Kontakte nicht mehr pflegt, aber es gibt da diese Gruppe Menschen, die das ein bisschen
+    verhindern und zwar die Geschwister. Geschwister sorgen im Homeschooling dafür, dass man sich nicht komplett langweilt, denn sie haben immer irgendwelche Probleme. Man kann einfach mit ihnen reden und das so wie man will, 
+    denn sie sind deine Art sowieso gewonnt. Sie leben ja schon eine Weile mit dir zusammen. Nunja, zwar ist das alles ganz nett, aber das blöde ist, wenn du der Älteste oder die Älteste bist. Dadurch ergeben sich ganz andere
+    Probleme. Die Geschwister beginnen einfach nur noch permanent um die rumzustehen, damit man ihnen hilft. Es kann extrem ermüdend sein, wenn man gerade in einer Videokonferenz ist, dann dein Bruder reinkommt und erwartet,dass
+    du ihm direkt hilfst und er eine komplette Scene macht falls nicht. Dann sitzt man da denkt sich nur, dass er weggehen soll, da man sich konzentrieren möchte und der Lehrer einen jede Minute drannehmen könnte. Dann muss man ihm
+    versprechen, dass man sicherlich später kommt und ihm dann hilft. Dazu kommt noch, wenn man mehrere Geschwister hat, die alle wollen, dass man ihnen hilft. Oder es gibt diese Art von Geschwistern, die es nicht schaffen überhaupt
+    anzufangen und dann am Ende der Woche irgendwas abgeben oder einen Test schreiben sollten. Zwar ist das alles extrem lästig, aber man kann schon froh sein, dass man diese Personen hat, denn sie bringen ein bisschen Farbe
+    in den langweiligen Alltag des Homeschoolings. 
   </body>
