--- a/project.html
+++ b/project.html
@@ -1,7 +1,14 @@
 
 <!DOCTYPE html>
+<html lang="project">
 <head>
 <title> Project </title>
+  <meta charset="utf-8">
+  <meta name="Mein Projekt" content="Mein Projekt zum Thema Homeschooling">
+  <script src="https://moodle.vobs.at/borge/">
+  </script>
+  <script src="https://www.borg.at/>
+               </script>
 <style>
 h2 { color: rgb(0, 300, 300);}
   body { background-color: rgb(300, 21, 22)}
@@ -10,10 +17,15 @@ h2 { color: rgb(0, 300, 300);}
 </style>
 </head>
 <body>
+<div class="Titel 1">              
 <h1> My Homepage </h1>
 <p1> Das ist meine Hompage und hier erarbeite Fortschritte in Sachen Informatik </p>
+                    </div>
+                    <div class="container">
+                    <div class="row">
+                    <div class="Lel">
   <br>
-  
+  <div class="Lel">
   <p1> Hier möchte ich über das Homeschooling reden und versuchen Leuten die vielleicht keine Möglichkeit haben, das selbst zu erfahren, einen kleinen Einblick zu erhaschen </p>
 <h2 id="Tag 1"> Allgemeines zu Homeschooling: </h2>
 <p1>Jeder Tag im Homeschooling fühlt sich an, wie stummes rumsitzen. Vielleicht sollte ich das ein bisschen erklären. In der Schule sitzt man zwar auch da, aber man ist nicht stumm, was die meisten Lehrer wissen.
@@ -26,13 +38,15 @@ h2 { color: rgb(0, 300, 300);}
   Vorallem vergisst du schnell etwas, wenn man die gesamte Lehergesellschaft an der Schule auffordert die selbe Plattform für die Aufgaben zu verwenden und dann die drei Lehrer um die Ecke kommen, die überhaupt keine Lust darauf haben. 
   Ich weiß nicht wie oft ich schon gedacht habe ich wäre fertig und dann kommt mir wieder in den Sinn, dass es da ja noch Aufgaben auf anderen Plattform gibt. Dieses Gefühl ist einfach entmutigend.
  </p>
-
+              </div>
+<div class="Lel">
 <a href="https://simon-36-e.github.io/bilder.html"> htpps://simon-36-e.github.io/bild.html
 </a> <br>
 <p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1> <br>
   <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
   <a href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html </a>
-  
+                                                    </div>
+                                                    <div class="Lel">
   <h2> Geschwister im Homeschooling</h2>
   <p1> Homeschooling ist nicht das aller beste. Ich habe ja schon früher gesagt, dass man sich dadurch einsam fühlt und seine sozialen Kontakte nicht mehr pflegt, aber es gibt da diese Gruppe Menschen, die das ein bisschen
     verhindern und zwar die Geschwister. Geschwister sorgen im Homeschooling dafür, dass man sich nicht komplett langweilt, denn sie haben immer irgendwelche Probleme. Man kann einfach mit ihnen reden und das so wie man will, 
@@ -42,4 +56,5 @@ h2 { color: rgb(0, 300, 300);}
     versprechen, dass man sicherlich später kommt und ihm dann hilft. Dazu kommt noch, wenn man mehrere Geschwister hat, die alle wollen, dass man ihnen hilft. Oder es gibt diese Art von Geschwistern, die es nicht schaffen überhaupt
     anzufangen und dann am Ende der Woche irgendwas abgeben oder einen Test schreiben sollten. Zwar ist das alles extrem lästig, aber man kann schon froh sein, dass man diese Personen hat, denn sie bringen ein bisschen Farbe
     in den langweiligen Alltag des Homeschoolings. 
+                                                                    </div>
   </body>
