--- a/project.html
+++ b/project.html
@@ -57,4 +57,6 @@ h2 { color: rgb(0, 300, 300);}
     anzufangen und dann am Ende der Woche irgendwas abgeben oder einen Test schreiben sollten. Zwar ist das alles extrem lästig, aber man kann schon froh sein, dass man diese Personen hat, denn sie bringen ein bisschen Farbe
     in den langweiligen Alltag des Homeschoolings. 
                                                                     </div>
+                                                                    </div>
+                                                                    </div>
   </body>
