--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@ h2 { color: rgb(0, 300, 300);}
 <p1> Das ist meine Hompage und hier erarbeite Fortschritte in Sachen Informatik </p>
                     
   <br>
-  
+  <div class="p-2 bg-info"> Flex 2</div>
   <p1> Hier möchte ich über das Homeschooling reden und versuchen Leuten die vielleicht keine Möglichkeit haben, das selbst zu erfahren, einen kleinen Einblick zu erhaschen </p>
 <h2 id="Tag 1"> Allgemeines zu Homeschooling: </h2>
 <p1>Jeder Tag im Homeschooling fühlt sich an, wie stummes rumsitzen. Vielleicht sollte ich das ein bisschen erklären. In der Schule sitzt man zwar auch da, aber man ist nicht stumm, was die meisten Lehrer wissen.
@@ -34,7 +34,7 @@ h2 { color: rgb(0, 300, 300);}
 <p1> Hier auf dieser Seite gibt es immer die Bilder, damit man sich etwas besser vorstellen kann wovon ich rede.</p1> <br>
   <p1> Hier rede ich auch noch über anderen Kram </p1> <br>
   <a href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html </a>
-   <div class="p-2 bg-info"> Hallo</div>
+   <div class="p-2 bg-info"> Flex 1</div>
   <h2> Geschwister im Homeschooling</h2>
   <p1> Homeschooling ist nicht das aller beste. Ich habe ja schon früher gesagt, dass man sich dadurch einsam fühlt und seine sozialen Kontakte nicht mehr pflegt, aber es gibt da diese Gruppe Menschen, die das ein bisschen
     verhindern und zwar die Geschwister. Geschwister sorgen im Homeschooling dafür, dass man sich nicht komplett langweilt, denn sie haben immer irgendwelche Probleme. Man kann einfach mit ihnen reden und das so wie man will, 
