--- a/project.html
+++ b/project.html
@@ -32,15 +32,15 @@ h2 { color: rgb(0, 300, 300);}
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
+    <ul class="Gute Links">
       <li class="nav-item">
         <a class="nav-link" href="https://www.borg.at">BORG Egg</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Link</a>
       </li>
     </ul>
   </div>
