--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@ h2 { color: rgb(0, 300, 300);}
 <p1> Das ist meine Hompage und hier erarbeite Fortschritte in Sachen Informatik </p>
   </div>   
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Gute Links</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,10 +37,10 @@ h2 { color: rgb(0, 300, 300);}
         <a class="nav-link" href="https://www.borg.at">BORG Egg</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html">Link</a>
+        <a class="nav-link" href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html">Themen</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Link</a>
+        <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
       </li>
     </ul>
   </div>
