--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@ h2 { color: rgb(0, 300, 300);}
         <a class="nav-link" href="https://www.borg.at">BORG Egg</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://simon-36-e.github.io/themen.html"> https://simon-36-e.github.io/themen.html">Themen</a>
+        <a class="nav-link" href="https://simon-36-e.github.io/themen.html">Themen</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
