--- a/project.html
+++ b/project.html
@@ -10,10 +10,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
-  .fakeimg {
+  <img src="https://www.suedkurier.de/storage/image/8/8/1/6/12996188_shift-966x593_1wmQuk_wUv3et.jpg" {
     height: 200px;
-    background: #aaa;
-  }
+    background: #aaa;}
 <style>
 h2 { color: rgb(0, 300, 300);}
   body { background-color: rgb(300, 21, 22)}
