--- a/project.html
+++ b/project.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
 <title> Project </title>
-  <style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=3">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </style>
   <style>
   <img src="https://www.suedkurier.de/storage/image/8/8/1/6/12996188_shift-966x593_1wmQuk_wUv3et.jpg" {
     height: 200px;
@@ -22,7 +22,7 @@ h2 { color: rgb(0, 300, 300);}
 </style>
 </head>
 <body>
-  <div class="Überschrift" style="margin-bottom:0">          
+  <div class="jumbotron text-center" style="margin-bottom:0">          
 <h1> My Homepage </h1>
 <p1> Das ist meine Hompage und hier erarbeite Fortschritte in Sachen Informatik </p>
   </div>   
