--- a/project.html
+++ b/project.html
@@ -13,6 +13,8 @@
   <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg"
     height: 200px;
     background: #aaa;>
+  <style>
+    color { body (rgb: 2,3,200)}
   </style>
 </head>
 <body>
