--- a/project.html
+++ b/project.html
@@ -96,6 +96,20 @@
     versprechen, dass man sicherlich später kommt und ihm dann hilft. Dazu kommt noch, wenn man mehrere Geschwister hat, die alle wollen, dass man ihnen hilft. Oder es gibt diese Art von Geschwistern, die es nicht schaffen überhaupt
     anzufangen und dann am Ende der Woche irgendwas abgeben oder einen Test schreiben sollten. Zwar ist das alles extrem lästig, aber man kann schon froh sein, dass man diese Personen hat, denn sie bringen ein bisschen Farbe
     in den langweiligen Alltag des Homeschoolings.</p>
+       <br>
+        
+        <h2 id="Dritter">Lehrer und Konferenzen </h2>
+        <img src="https://www.it-daily.net/images/Aufmacher-2020/Home-Schooling-1675198060-700.jpg">
+        <p> Wahrscheinlich geht nicht nur Schülern das Homeschooling auf die Nerven, sondern auch den Lehrern. Das merkt man an einigen Stellen. Ein Beispiel ist die Veröffentlichung von Aufträgen. Es wird immer häufiger, dass 
+          die Aufträge sehr viel später kommen als es eigentlich gefordert wird. Manchmal ist es so das noch am Dienstag Nachmittag ein Auftrag rein kommt. Das ist einfach so nicht haltbar. Die meisten Schüler bemühen sich doch auch
+          die Aufträge pünktlich wieder abzugeben und warten damit nicht drei Tage nach dem eigentlichen Abgabe Termin. Vorallem irritiert es wenn der Auftrag nicht mal nur bis Freitag ist sondern schon bis Donnerstag oder gar Mittwoch.
+          Die Lehrer haben aber wahrscheinlich auch kaum Energie Arbeitsaufträge zu machen und abzuschicken. Zwar schaffen das die Schüler die auch kaum noch Lust haben auch aber egal. Deshalb sind einige Lehrer etwas anderes umgestiegen.
+          Das sind Video-Konferenzen. Warum eigentlicha auch nicht? Es ist ja theoretisch einfach nur der normale Unterricht durch den Computer. Das stimmt irgendwo auch und ein bis zwei Video-Konferenzen sind auch nicht schlimm,
+          aber den ganzen eigentlichen Schultag Video-Konferenzen zu haben ist etwas übertrieben. Warum teilt man das nicht auf? Wir haben schließlich auch noch Aufträge in den Fächern. Bei den Videokonferenzen gibt es auch zwei Arten von
+          Lehrern. Es gibt die, die die Video-Konferenzen immer am gleichen Tag zur gleichen Zeit machen und das ist auch ganz nett. Man kann sich so schon ziemlich gut denken, wann man welches Fach hat und ist vorbereitet. Nun gibt
+          es auch noch die Art von Lehrern die, die Video-Konferenzen einfach irgendwo hin schieben. Manchmal sogar in die Stunden in denen man eigentlich das Fach gar nicht hätte. So muss man permanent darauf achten, dass man keine Video-
+          Konferenz verpasst. Da passieren natürlich viele Fehler. Dann regen sich aber wiederum die Lehrer auf, dass man nicht anwesend war. Schön wäre es wenn man die Video-Konferenzen einfach an fixen Terminen an den immer gleichen
+          Tagen macht. Es wäre ja in der Schule auch nicht anderes und man könnte sie etwas mehr über die Woche verteilen. So sitzt man den gesamten Montag vor Video-Konferenzen und die Motivation geht stetig runter. 
     </div>
   </div>
 </div>
