--- a/index.html
+++ b/index.html
@@ -17,6 +17,38 @@
   </style>
 </head>
 <body>
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024.jpg" alt="Los Angeles">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg" alt="Chicago">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbriXESK5ElquRxKMfYNNAo4tC1DF2hzcCmA&usqp=CAU" alt="New York">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+</div>
+
 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Homeschooling</h1>
