--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg" alt="Chicago">
     </div>
     <div class="carousel-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbriXESK5ElquRxKMfYNNAo4tC1DF2hzcCmA&usqp=CAU" alt="New York">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbriXESK5ElquRxKMfYNNAo4tC1DF2hzcCmA&usqp=CAU" alt="New York" width="1000">
     </div>
   </div>
 
