--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024.jpg" alt="Los Angeles">
+      <img src="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024.jpg" alt="Los Angeles" width="1500" length="1500">
     </div>
     <div class="carousel-item">
-      <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg" alt="Chicago">
+      <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg" alt="Chicago" width="1500" length="1500">
     </div>
     <div class="carousel-item">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbriXESK5ElquRxKMfYNNAo4tC1DF2hzcCmA&usqp=CAU" alt="New York" width="1500" length="1500">
