--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
   <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg"
-    height: 200px;
-    background: #aaa;>
+    height: 200px;>
   
     body { color: rgb(2,3,200)}
   </style>
