--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
           es auch noch die Art von Lehrern die, die Video-Konferenzen einfach irgendwo hin schieben. Manchmal sogar in die Stunden in denen man eigentlich das Fach gar nicht hätte. So muss man permanent darauf achten, dass man keine Video-
           Konferenz verpasst. Da passieren natürlich viele Fehler. Dann regen sich aber wiederum die Lehrer auf, dass man nicht anwesend war. Schön wäre es wenn man die Video-Konferenzen einfach an fixen Terminen an den immer gleichen
           Tagen macht. Es wäre ja in der Schule auch nicht anderes und man könnte sie etwas mehr über die Woche verteilen. So sitzt man den gesamten Montag vor Video-Konferenzen und die Motivation geht stetig runter.
+
+<h2 id="Vierter">Aufgaben im Homeschooling </h2>
+<p> Die Aufgaben sind eine Sache für sich im Homeschooling. Eigentlich machen sie knapp 90% der Zeit des Homeschoolings aus und sind ziemlich ausschlaggebend wie gut man diese Zeit übersteht. Sollte man recht kreative Aufgaben bekommen
+  wird man sich wahrscheinlich nicht langweilen und immer sich auf diese Aufgaben freuen. Bei mir ging das so weit, dass ich mir die für mich am unterhaltsamsten oder in anderen Worten ausgedrückt weniger Augenkrebs verursachenden Aufgaben
+  bis zum Schluss aufschob um sie dann als perfekter Abschluss einer langen Woche genießen konnte. Das geht vom einfachen Anschauen von Dokumentationen, bei denen sich wenn man ehlich ist so oder so nichts merkt, bis hin zu einfachen Experimenten.
+  Dann gab es aber auch noch die Aufgaben die etwas unangenehmer waren. Da gibt es viele Faktoren, die eine Aufgabe ziemlich unangenehm machen. Man kann die Aufgabe zu lang machen und sie geht über 3 Seiten und man hat schon keine Lust mehr, nachdem man sich den 5 seitigen
+  Merktext durchgelesen hat. Man kann auch die Aufgaben komplet unverständlich formulieren, sodass der Schüler keinen Plan mehr hat, was eigentlich seine Aufgabe ist. Ein Beispiel dafür war als ich die Aufgabe war: "Beschreibe die Oberflächenformen,
+  die du auf dem Bild erkennst". Das hört sich jetzt erstmal nicht so dumm an oder? Jedoch war das ein Sattelietenbild und ich war maximal verwirrt. Was soll man da beschreiben? Ja, Berge sind braun und sehen aus wie zerknülltes Papier. Das hört sich so an
+  als hätte das ein 3-Jährigen gefragt, wie sein Kunstprojekt im Kindergarten aussieht. Oder wie soll man da die Wüste beschreiben? Ist halt gelb. Das ist wieder der gleiche Fall. Das Problem mit der Aufgabe kann sich aber dann auch erst nach der Kontrolle
+  des Lehres zeigen, denn sollte ein Lehrer von dir verlangen, dass du die Aufgabe bitte verbesserst, da sie falsch ist, kann ein Problem auftreten. Das wäre dass du überhaupt keine Idee hast, was falsch ist. Er hat nur gesagt falsch. Man sucht nun die Aufgabe ab,
+  um irgendeinen Fehler zu finden, was man aber nicht tut. Dann fragt man die Klasse oder einen Klassenkameraden, welche im Notfall immer ein guter Ratgeber sind und diese geben einem ein sehr ähnliche Antwort, welche man schon hat. Dann kommt es zu der unangenehmen
+  Situation, dass man seinen Lehrer fragen muss und ich weiß nicht was es ist, aber es ist immer unangenehm mit Lehrern außerhalb des Unterrichts zu reden, selbst wenn man nicht mehr an dieser Schule ist. Jedoch hat man sich dann überwunden und der Lehrer gibt genau
+  die selbe Antwort, wie man sie schon hat. Zum Schluss lässt sich sagen, dass die meisten Lehrer versuchen gute Aufgaben zu stellen und dafür bin ich ihnen auch sehr dankbar, denn wie erwähnt schiebe ich die besten Aufgaben immer bis zum Schluss auf, aber diese
+  Probleme die ich nun geschildert habe, sind alles andere als gut. Jedoch ist es sowiso so dass die meisten Lehrer mit der Zeit keinen Bock mehr haben und irgendwas hinklatschen oder sie geben gar keine Aufträge mehr.
     </div>
   </div>
 </div>
