--- a/index.html
+++ b/index.html
@@ -164,7 +164,13 @@
     Das Erste ist speziell ein Problem. Man nennt diese Überprüfungen hier nicht Tests, sondern MÜP. Das steht für Mitarbeitsüberprüfung. Man hat uns diese angekündigt und wir dachten, dass das jetzt so nebenbei funktionieren wird, aber nein. Alle gesamten MÜP wurden auf zwei Wochen verlegt, um
     dem Schüler so viel Stress zu geben wie möglich. Zwar kann man durch die meisten MÜP nicht die Noten verschlechtern, aber es wäre gut in Fächern, wo man auf einem knappen negativ steht, eine gute MÜP abzuliefern. Warum machen dann die ganzen Lehrer diese MÜP zu dieser Zeit? Das ist eine Frage,
     die ich mir auch schon seit ungefähr einer Woche stelle. Wahrscheinlich denken sie, dass sonst keine Zeit mehr wäre, obwohl wir nocht 5 Schulwochen haben und 5 - 2 = 3. Zwar fällt noch eine Woche nach dem Notenschluss weg, der auch wegen des Homeschoolings verschoben wurde, aber da sind noch 2
-    weitere Wochen und ich glaube da habe ich mich nicht verrechnet. Eine weitere Sache
+    weitere Wochen und ich glaube da habe ich mich nicht verrechnet. Eine weitere Sache wie diese MÜP ablaufen. Jeder Lehrer macht irgendwas anderes und man hat bei der ersten MÜP, wobei es eh nur eine gibt, keinen Plan, was man dort machen muss. Man hat einem nur diesen Stoff angesagt und sich gedacht,
+    wie schlimm kann es schon werden. Nunja es ist ziemlich unangenehm gekommen. Man saß da und bekam Aufgaben, bei welchen man nichtmal erwarten konnte, dass sie bei einer Schularbeit kommen. Dabei kamen auch so skurrile Beispiele, wei Bierschaum der geometrisch abfällt, aber einem die Aufgaben Stellung
+    das so versucht zu erklären, dass der Bierschaum arrythmetisch sinkt indem man 100 pro Mille angibt. Da denkt sich der normale Schüler ja scheint arrythmetisch zu sein, weil es ja pro Mille 100 sinkt. Für jeden, der kein kompletter Alkoholiker ist, hätte diese Ausage auch so Sinn gemacht. Dann 
+    stellt sich mir noch die Frage, warum genau in diesen Fächern es eine MÜP gibt. Warum nicht in Fächern, die es nötig haben, wie Musik. Ich weiß, viele empfinden Musik als unnötig, speziell wenn man in einem Naturwissenschaftlichen Zweig ist, aber wir hatten im gesamten Jahr keinen einzigen
+    Test in Musik. Ich möchte wissen woraus der Lehrer die Note zusammenwürfelt. Aber dafür bekommt man in Mathe eine schöne MÜP, die die meisten Schüler eher verwirrt, und man eigentlich schon eine Schularbeit, gehabt hätte, zwar ist da das Argument, dass man eigentlich zwei hätte haben sollen,
+    aber kommt schon. Der Lehrer hat diese Schularbeit und wenn jetzt jemand das Argument bringt, das eine Schularbeit zu wenig ist, da man ja mal einen schlechten Tag hat, ist das nicht wichtig, denn man kann auch zwei schlechte Tage haben und wenn man ehrlich ist, sollte man sich eher am gesamten
+    System etwas ändern. 
     </div>
   </div>
 </div>
@@ -177,3 +183,4 @@
 
 </body>
 </html>
+
