--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-    body { color: rgb(2,3,7)}
-    body { background-color: rgb(360,350,360)}
 
-  </style>
+
 </head>
 <body>
 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -48,9 +46,10 @@
 </div>
 
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center" style="margin-bottom:0" >
   <h1 class="font-weight-bold">Homeschooling</h1>
 </div>
+
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand">Gute Links</a>
@@ -90,6 +89,25 @@
         <li class="nav-item">
           <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
         </li>
+      </ul>
+      <h3 class="font-weight-bold">Kapitel</h3>
+      <ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#Erstens"> Homeschooling Allgemein</a>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Zweiter"> Geschwister im Homeschooling</a>
+            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Dritter"> Lehrer und Konferenzen</a>
+              </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#Vierter"> Aufgaben im Homeschooling</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Fünfter"> Die Folgen von Homeschooling</a>
+                  </li>
+
 
       </ul>
       <hr class="d-sm-none">
@@ -160,14 +178,15 @@
   Probleme die ich nun geschildert habe, sind alles andere als gut. Jedoch ist es sowiso so dass die meisten Lehrer mit der Zeit keinen Bock mehr haben und irgendwas hinklatschen oder sie geben gar keine Aufträge mehr.</p>
 
   <h2 id="Fünfter" class="font-weight-bold"> Die Folgen des Homeschoolings in der Schule</h2>
- 
+
+<img src="https://bilder.t-online.de/b/78/07/06/80/id_78070680/c_Master-1-1-Large/tid_da/gestresster-schueler.jpg" alt="gestresster Schüler" width="600">
   <p class="font-weight-bold"> Das Homeschooling ist nicht nur, während des Homeschoolings nervig, sondern auch nach dem Homeschoolin in der Schule. Die Lehrer verlangen immer ganz unterschiedlich nach dem Stoff aus dem Homeschooling. Manche machen Tests und andere wollen die Mappe kontrollieren.
     Das Erste ist speziell ein Problem. Man nennt diese Überprüfungen hier nicht Tests, sondern MÜP. Das steht für Mitarbeitsüberprüfung. Man hat uns diese angekündigt und wir dachten, dass das jetzt so nebenbei funktionieren wird, aber nein. Alle gesamten MÜP wurden auf zwei Wochen verlegt, um
-    dem Schüler so viel Stress zu geben wie möglich. Zwar kann man durch die meisten MÜP nicht die Noten verschlechtern, aber es wäre gut in Fächern, wo man auf einem knappen negativ steht, eine gute MÜP abzuliefern. Warum machen dann die ganzen Lehrer diese MÜP zu dieser Zeit? Das ist eine Frage,
+    dem Schüler so viel Stress zu geben wie möglich. Zwar kann man durch die meisten MÜP nicht die Noten verschlechtern, aber es wäre gut in Fächern, wo man auf einem knappen negativ steht, eine gute MÜP abzuliefern.</p> <p class="font-weight-bold"> Warum machen dann die ganzen Lehrer diese MÜP zu dieser Zeit? Das ist eine Frage,
     die ich mir auch schon seit ungefähr einer Woche stelle. Wahrscheinlich denken sie, dass sonst keine Zeit mehr wäre, obwohl wir nocht 5 Schulwochen haben und 5 - 2 = 3. Zwar fällt noch eine Woche nach dem Notenschluss weg, der auch wegen des Homeschoolings verschoben wurde, aber da sind noch 2
     weitere Wochen und ich glaube da habe ich mich nicht verrechnet. Eine weitere Sache wie diese MÜP ablaufen. Jeder Lehrer macht irgendwas anderes und man hat bei der ersten MÜP, wobei es eh nur eine gibt, keinen Plan, was man dort machen muss. Man hat einem nur diesen Stoff angesagt und sich gedacht,
     wie schlimm kann es schon werden. Nunja es ist ziemlich unangenehm gekommen. Man saß da und bekam Aufgaben, bei welchen man nichtmal erwarten konnte, dass sie bei einer Schularbeit kommen. Dabei kamen auch so skurrile Beispiele, wei Bierschaum der geometrisch abfällt, aber einem die Aufgaben Stellung
-    das so versucht zu erklären, dass der Bierschaum arrythmetisch sinkt indem man 100 pro Mille angibt. Da denkt sich der normale Schüler ja scheint arrythmetisch zu sein, weil es ja pro Mille 100 sinkt. Für jeden, der kein kompletter Alkoholiker ist, hätte diese Ausage auch so Sinn gemacht. Dann
+    das so versucht zu erklären, dass der Bierschaum arrythmetisch sinkt indem man 100 pro Mille angibt. Da denkt sich der normale Schüler ja scheint arrythmetisch zu sein, weil es ja pro Mille 100 sinkt. Für jeden, der kein kompletter Alkoholiker ist, hätte diese Ausage auch so Sinn gemacht.</p> <p class="font-weight-bold"> Dann
     stellt sich mir noch die Frage, warum genau in diesen Fächern es eine MÜP gibt. Warum nicht in Fächern, die es nötig haben, wie Musik. Ich weiß, viele empfinden Musik als unnötig, speziell wenn man in einem Naturwissenschaftlichen Zweig ist, aber wir hatten im gesamten Jahr keinen einzigen
     Test in Musik. Ich möchte wissen woraus der Lehrer die Note zusammenwürfelt. Aber dafür bekommt man in Mathe eine schöne MÜP, die die meisten Schüler eher verwirrt, und man eigentlich schon eine Schularbeit, gehabt hätte, zwar ist da das Argument, dass man eigentlich zwei hätte haben sollen,
     aber kommt schon. Der Lehrer hat diese Schularbeit und wenn jetzt jemand das Argument bringt, das eine Schularbeit zu wenig ist, da man ja mal einen schlechten Tag hat, ist das nicht wichtig, denn man kann auch zwei schlechte Tage haben und wenn man ehrlich ist, sollte man sich eher am gesamten
